# fusi-pybids-demo

./: .gitmodules  LICENSE  README.md  fusi_bids.json  fusi_pybids_demo.ipynb  pyproject.toml  requirements.txt
