[project]
name = "fusi-pybids-demo"
version = "0.0.11"
description = "Introduction to PyBIDS for fUSI-BIDS users."
authors = [
    { name = "Samuel Le Meur-Diebolt", email = "samuel@diebolt.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catppuccin-jupyterlab>=0.2.4",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "jupyterlab>=4.3.1",
    "pybids>=0.17.2",
]
